// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LevelSolver /> Matches the current snapshot 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot when an error has occured 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot when loaded with a solution present 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
        <Connect(Component)
          solution={
            Array [
              "MOVE_DOWN",
            ]
          }
        />
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot when loading 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot when there is an error 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<LevelSolver /> Matches the current snapshot with loaded with no solution 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        <Component
          tiles={
            Array [
              1,
              2,
              3,
            ]
          }
        />
      </styled.div>
      <styled.div>
        <p>
          No solutions available
        </p>
      </styled.div>
    </styled.div>
    <styled.div>
      <p>
        Full solutions will appear here
      </p>
    </styled.div>
  </styled.div>
</styled.div>
`;
